[package]
name = "tinymd"
version = "0.1.0"
authors = ["James Hawley <jamesrichardhawley@gmail.com>"]
homepage = "https://jrhawley.github.io/"
description = "A small Markdown parser written in Rust"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
